# sql-to-viz

./: LICENSE  README.md  index.html  plot.html  pyproject.toml  script.js
app/: __init__.py  config.py  main.py
app/api/: app.py  code.py  test.py  testapp.py
app/core/: CodeGeneration.py  ModifiedSQL.py
app/utils/: utilities.py
